Bug 1675973 - Remove wrong assertion in PushManager.cpp r=dom-workers-and-storage-reviewers,edenchuang

Differential Revision: https://phabricator.services.mozilla.com/D130268